--- a/mobile.css
+++ b/mobile.css
@@ -53,18 +53,16 @@ header h1
 .explorer p
 {
     font-weight: 300;
+    margin: 0 2rem 1rem 1rem;
 }
 .explorer button
 {
     border: 0;
     padding: 0.75rem 1.5rem;
-    font-weight: 500;
     border-radius: 2rem;
     color: white;
-    background-color: #686868;
     background-image: linear-gradient(0deg,var(--primary),var(--secondary));
     cursor: pointer;
-    transition-duration: 100ms;
     box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 25%);
 }
 .explorer button:hover
@@ -108,6 +106,11 @@ header h1
         background-color: #f6f6f6;
         display: flex;
         position: relative;
+        cursor: pointer;
+    }
+    .fonctionnement .icone:hover
+    {
+        transform: scale(1.02);
     }
     .fonctionnement i 
     {
