--- a/page-mobile.css
+++ b/page-mobile.css
@@ -88,7 +88,6 @@ body
 }
 .menuidem
 {
-    
     border-radius: 1rem;
     background: white;
     padding: 0.2rem 1rem;
@@ -96,16 +95,29 @@ body
 }
 .menuidem h4
 {
-    margin: 0.5rem;
+    margin: 0.5rem 0 0.2rem 0.5rem;
 }
 .menuidem p
 {
-    margin: 0.5rem;
+    margin: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 .menuidem span
 {
     font-weight: bold;
+    margin-left:auto;
 }
+.prix
+{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-left: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
 /* commander*/
 .commander
 {
@@ -130,11 +142,6 @@ body
     transform: scale(1.02);
     opacity: 0.9;  
 }
-
-
-
-
-
 /* footer*/
 footer
 {
