--- a/page-mobile.css
+++ b/page-mobile.css
@@ -60,7 +60,7 @@ body
 }
 .titre i
 {
-    margin: auto;
+    margin: 1.2rem 0 0 6rem;
     font-size: 2rem;
 }
 /* section entrée*/
@@ -92,6 +92,8 @@ body
     background: white;
     padding: 0.2rem 1rem;
     margin-bottom: 1rem;
+    cursor: pointer;
+    width: 23rem;
 }
 .menuidem h4
 {
