--- a/mobile.css
+++ b/mobile.css
@@ -148,7 +148,7 @@ header h1
 {
 
     height: 12rem;
-    width: 100%;
+    width: 22rem;
     border-radius: 1rem 1rem 0 0;
     object-fit: cover;
 }
