--- a/mobile.css
+++ b/mobile.css
@@ -26,6 +26,7 @@ header
 header h1
 {
     margin: 0;
+    font-size: 2.2rem;
 }
 .localisation
 {
@@ -36,6 +37,10 @@ header h1
     text-align: center;
     background-color: #F2F2F2;
     color: #585858;
+}
+.localisation h2
+{
+    font-size: 1.2rem;
 }
 .icone-localisation
 {
@@ -51,13 +56,15 @@ header h1
 }
 .explorer h2
 {
-    margin-top: 0rem;
+    margin: 0 0 1rem 0;
     padding-top: 2rem;
+    font-size: 1.8rem;
 }
 .explorer p
 {
     font-weight: 300;
-    margin: 0 2rem 1rem 1rem;
+    margin: 0 2rem 2.5rem 1rem;
+    font-size: 1.2rem;
 }
 .explorer button
 {
@@ -99,7 +106,7 @@ header h1
         justify-content: center;
         align-items: center;
         position: absolute;
-        left: -1rem;
+        left: -0.9rem;
     }
     .fonctionnement .icone
     {
@@ -155,12 +162,13 @@ header h1
 .nouveau
 {
     background-color: #99e2d0;
-    color: #1b6150;
+    color: #038565;
     padding: 0.3rem 1rem;
     border-radius: 0.125rem;
     position: absolute;
     top: 1rem;
     right: 0.75rem;
+    font-weight: 500;
 }
 .carte-restaurants a
 {
@@ -169,14 +177,14 @@ header h1
 }
 figcaption h3
 {
-    margin: 1rem 0 0 1rem;
-    font-size: 1.4rem;
+    margin: 1rem 0 0.2rem 1rem;
+    font-size: 1.5rem;
 }
 figcaption p
 {
     margin: 0 0 0 1rem;
     font-size: 1.2rem;
-    padding-bottom: 1.2rem;
+    padding-bottom: 1.4rem;
 }
 figcaption
 {
@@ -184,10 +192,10 @@ figcaption
 }
 .icone-aime
 {
-    font-size: 2.5rem;
+    font-size: 2.4rem;
     position: absolute;
     right: 2rem;
-    top: 0;
+    top: 0.3rem;
 }
 /* footer*/
 footer
@@ -214,7 +222,7 @@ footer p
 footer i
 {
     margin-right: 1rem;
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 .fa-hands-helping:before
 {
