--- a/page-mobile.css
+++ b/page-mobile.css
@@ -36,9 +36,8 @@ body
 /* section image-palette*/
 .image-palette img
 {
-    max-width: 100%;
-    max-height: 32rem;
-    width: 100%;
+    max-height: 18rem;
+    width: 25rem;
     object-fit: cover;
 }
 /* menu*/
@@ -56,11 +55,11 @@ body
 .titre h2
 {
     font-family: Shrikhand,"cursive";
-    margin-left: 1rem;
+    margin-left: 1.5rem;
 }
 .titre i
 {
-    margin: 1.2rem 0 0 6rem;
+    margin: 1.2rem 0 0 5rem;
     font-size: 2rem;
 }
 /* section entrée*/
@@ -98,6 +97,7 @@ body
 .menuidem h4
 {
     margin: 0.5rem 0 0.2rem 0.5rem;
+    font-size: 1.2rem;
 }
 .menuidem p
 {
@@ -105,6 +105,7 @@ body
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
+    max-width: 18.2rem;
 }
 .menuidem span
 {
@@ -131,8 +132,8 @@ body
 .button-commander
 {
     border: 0;
-    padding: 0.75rem 1.5rem;
-    font-size: 1.1rem;
+    padding: 1rem 3rem;
+    font-size: 1rem;
     border-radius: 100px;
     color: white;
     background-image: linear-gradient(0deg,var(--primary),var(--secondary));
@@ -169,7 +170,7 @@ footer p
 footer i
 {
     margin-right: 1rem;
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 .fa-hands-helping:before
 {
