--- a/mobile.css
+++ b/mobile.css
@@ -14,7 +14,52 @@ body
     font-family: "roboto",sans-serif;
     margin: 0;
 }
+/* loader*/
 
+.loader
+{
+    background-color: white;
+    height: 100vh;
+    inset: 0;
+    position: fixed;
+    opacity: 0.9;
+    z-index: 1;  
+    animation: page 3s;
+    animation-fill-mode: forwards;
+}
+.chargement
+{
+    border: 10px solid var(--secondary);
+    border-top: 10px solid var(--primary);
+    border-left: 10px solid var(--tertiary);
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    position: absolute;
+    inset: 0;
+    animation: rotation 1s linear infinite;
+}
+/*animation spiner*/
+@keyframes rotation 
+{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+@keyframes page 
+{
+    0%{
+        transform: scale(1);
+    }
+    100%{
+        transform: scale(0);
+    }
+}
+/*header*/
 header
 {
     font-family:"Shrikhand",cursive ;
@@ -63,7 +108,7 @@ header h1
 .explorer p
 {
     font-weight: 300;
-    margin: 0 2rem 2.5rem 1rem;
+    margin: 0 2rem 1.5rem 1rem;
     font-size: 1.2rem;
 }
 .explorer button
@@ -72,7 +117,7 @@ header h1
     padding: 0.75rem 1.5rem;
     border-radius: 2rem;
     color: white;
-    background-image: linear-gradient(0deg,var(--primary),var(--secondary));
+    background-image: linear-gradient(170deg,var(--secondary),var(--primary));
     cursor: pointer;
     box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 25%);
 }
@@ -80,6 +125,7 @@ header h1
 {
     transform: scale(1.02);
     opacity: 0.9;
+    box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 50%);
 }
 /* section fonctionnement*/
 
@@ -130,6 +176,10 @@ header h1
         color: #7e7e7e;
         font-size: 1.2rem;
     }
+    .store
+    {
+        color: #9356DC;
+    }
 
 /* section restaurants*/
 .restaurants
@@ -149,6 +199,7 @@ header h1
     border-radius: 1rem;
     margin: 1.5rem;
     position: relative;
+    padding-bottom: 2rem;
 }
 
 .carte-img
@@ -186,17 +237,46 @@ figcaption p
     font-size: 1.2rem;
     padding-bottom: 1.4rem;
 }
-figcaption
+figcaption .heart
 {
-    position: relative;
+    display: flex;
+    justify-content: end;
+    margin-top: -4rem;
+    margin-right: 1rem;
 }
 .icone-aime
 {
-    font-size: 2.4rem;
-    position: absolute;
-    right: 2rem;
-    top: 0.3rem;
+    font-size: 2rem;
+    margin-right: 0;
+    position: relative;
+    overflow: hidden;
+    /*background: linear-gradient(170deg,var(--secondary),var(--primary));*/
 }
+
+/*.icone-aime::after
+{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: white;
+    bottom: 10%;
+    left: -6%; 
+    border-radius: 45%; 
+    animation: heart 6s ease-in-out infinite;
+}
+
+@keyframes heart
+{
+    0%{
+        transform: translateY(0) rotate(0);
+    }
+    100%{
+        transform: translateY(-100%) rotate(500deg);
+    }
+}*/
+
+
 /* footer*/
 footer
 {
