--- a/page-desktop.css
+++ b/page-desktop.css
@@ -26,7 +26,7 @@
         display: flex;
         justify-content: space-evenly;
     }
-    .menidem:hover .menu-confirmation
+    .menu-item:hover .menu-confirmation
     {
         margin-right: -3rem;
         background-color: red;
