--- a/page-tablette.css
+++ b/page-tablette.css
@@ -9,9 +9,27 @@
         max-height: 19rem;
         width: 51.2rem;
     }
-    .titre i 
+    .titre .icone-aime
     {
-        margin-left: 30rem;
+        font-size: 2rem;
+        margin: 1rem 0 0 32rem;
+        position: relative;
+    }
+    .titre .icone-aime-2
+    {
+        position: absolute;
+        font-size: 2.1rem;
+        margin-left: 47.4rem;
+        margin-top: 1rem;
+        color: transparent;
+        background: linear-gradient(var(--primary),var(--secondary));
+        -webkit-background-clip: text;
+        opacity: 0;
+        transition: all 600ms;
+    }
+    .titre .icone-aime-2:hover
+    {
+        opacity: 1;
     }
     .menu-item
     {
