--- a/page-tablette.css
+++ b/page-tablette.css
@@ -39,6 +39,10 @@
     {
         text-overflow: inherit;
     }
+    .menu-item span 
+    {
+        margin-left: 0.8rem;
+    }    
     .prix
     {
         margin-left: 6rem;
@@ -46,6 +50,10 @@
     .menu-confirmation
     {
         margin-left: 3rem;
+    }
+    .menu-item:hover .prix
+    {
+        margin-left: 2rem;
     }
     footer h2 
     {
