--- a/page-mobile.css
+++ b/page-mobile.css
@@ -57,11 +57,6 @@ body
     font-family: Shrikhand,"cursive";
     margin-left: 1.5rem;
 }
-/*.titre i
-{
-    margin: 1.2rem 0 0 5rem;
-    font-size: 2rem;
-}*/
 .icone-aime
 {
     font-size: 2rem;
@@ -111,6 +106,7 @@ body
 {
     border-radius: 1rem;
     background: white;
+    box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 25%);
     padding: 0.4rem 1rem;
     margin-bottom: 1rem;
     cursor: pointer;
