--- a/page-tablette.css
+++ b/page-tablette.css
@@ -41,7 +41,7 @@
     }
     .menu-item span 
     {
-        margin-left: -0.2rem;
+        margin-right: -8.5rem;
     }    
     .prix
     {
@@ -49,12 +49,17 @@
     }
     .menu-confirmation
     {
-        margin-left: 3rem;
+        margin-left: 8.5rem;
     }
-    .menu-item:hover .prix
+    .menu-item:hover .menu-description
     {
-        margin-left: 1.4rem;
+        margin-right: -4rem;
     }
+    .menu-item:hover span
+    {
+        margin-right: -5rem;
+    }
+    
     footer h2 
     {
         margin-left: 23rem;
