--- a/page-mobile.css
+++ b/page-mobile.css
@@ -186,7 +186,8 @@ body
     display: flex;
     justify-content: end;
     margin-right: -4rem;
-    margin-top: -1.2rem;   
+    margin-top: -1.2rem;
+    transition: all 0.5s;   
 }
 .menu-confirmation
 {
