ajouter un max-width sur menu item p sur descktop style et tablette style

--- a/page-desktop.css
+++ b/page-desktop.css
@@ -52,6 +52,10 @@
     {
         margin-right: -5rem;
     }
+    .menu-item p 
+    {
+        max-width: 19.2rem;
+    }
     .menu-confirmation
     {
         margin: 0 0 0 5rem;
