--- a/mobile.css
+++ b/mobile.css
@@ -81,15 +81,25 @@ header h1
     gap: 20px;
     text-align: center;
     background-color: #F2F2F2;
-    color: #585858;
+    color: #444444;
 }
-.localisation h2
+.lieu
 {
-    font-size: 1.2rem;
+    border: transparent;
+    margin: 1rem 0 1rem 0;
+    background: #F2F2F2;
+    padding: 0.5rem;
+}
+input::placeholder
+{
+    color: #444444;
+    font-size: 1.4rem;
 }
 .icone-localisation
 {
    font-size: 1.5rem; 
+   margin-left: 2rem;
+   margin-bottom: 0.5rem;
 }
 
 /* section explorer */
