aux survol sur les items de fonctionnement, l'icone et le fond(violet clair)se changent en violet

--- a/mobile.css
+++ b/mobile.css
@@ -181,7 +181,7 @@ input::placeholder
         transform: scale(1.02);
         background-color: #ebe2f5;
     }
-    .fonctionnement:hover i
+    .icone:hover i
     {
         color: var(--primary);
 
