--- a/menu-mobile.css
+++ b/menu-mobile.css
@@ -193,7 +193,7 @@ body
 {
     background-color: var(--tertiary);
     border-radius: 0 1rem 1rem 0;
-    margin: 0 0 0 4%;
+    margin: 0 0 0 4rem;
     width: 100%;
     height: 100%;
     display: flex;
