--- a/menu-mobile.css
+++ b/menu-mobile.css
@@ -13,6 +13,7 @@ body
 {
     font-family: "roboto",sans-serif;
     margin: 0;
+    scroll-behavior: smooth;
 }
 /* HEADER*/
 .entête
@@ -37,7 +38,7 @@ body
 .image-palette img
 {
     max-height: 18rem;
-    width: 25rem;
+    width: 100%;
     object-fit: cover;
 }
 /* menu*/
@@ -46,11 +47,14 @@ body
     margin-top: -3rem;
     border-radius: 2rem 2rem 0 0;
     background-color: #f6f6f6;
+    padding: 1rem;
     position: relative; 
 } 
 .titre
 {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .titre h2
 {
@@ -67,28 +71,29 @@ body
 {
     position: absolute;
     font-size: 2.1rem;
-    margin-left: 21.4rem;
-    margin-top: 1rem;
+    /*margin-left: 21.4rem;
+    margin-top: 1rem;*/
     color: transparent;
     background: linear-gradient(var(--primary),var(--secondary));
     -webkit-background-clip: text;
     opacity: 0;
     transition: all 600ms;
+    right: 0;
+    margin-right: 12.1%;
 }
 .icone-aime-2:hover
 {
     opacity: 1;
 }
 /* section entrée*/
-.titre-menu
+/*.titre-menu
 {
     padding: 1rem;
-}
+}*/
 .titre-menu h3
 {
     text-transform: uppercase;
     font-weight: 400;
-    margin-left: 1rem;
     position: relative;
     padding-bottom: 0.5rem;
 }
@@ -180,13 +185,10 @@ body
     overflow: hidden;
     max-width: 18.2rem;
 }
-.menu-item span
+.menu-description span
 {
     font-weight: bold;
-    display: flex;
-    justify-content: end;
-    margin-right: -4rem;
-    margin-top: -1.2rem;
+    margin-left: 113%;
     transition: all 0.5s;   
 }
 .menu-confirmation
@@ -221,9 +223,9 @@ body
     margin-right: -3.5rem;
     
 }
-.menu-item:hover span
+.menu-description:hover span
 {
-    margin-right: -0.5rem;
+    margin-left: 20rem;
 }
 .menu-item:hover .icon-confirmation
 {
