--- a/menu-desktop.css
+++ b/menu-desktop.css
@@ -13,10 +13,6 @@
     {
         margin: 0.5rem 0rem 0rem 1.5rem;
     }
-    .titre h2 
-    {
-        margin-left: 8.5rem;
-    }
     .titre .icone-aime
     {
         font-size: 2rem;
@@ -27,7 +23,7 @@
     {
         position: absolute;
         font-size: 2.1rem;
-        margin-right: 8.8%;
+        margin-right: 0.8%;
         margin-top: 1rem;
         color: transparent;
         background: linear-gradient(var(--primary),var(--secondary));
@@ -39,14 +35,14 @@
     {
         opacity: 1;
     }
-    .entrée-plat-dessert
+    /*.entrée-plat-dessert
     {
         display: flex;
         justify-content: space-evenly;
-    }
+    }*/
     .menu-item
     {
-        width: 28rem;
+        width: 100%;
     }
     /*.menu-item span
     {
@@ -56,9 +52,20 @@
     {
         max-width: 19.2rem;
     }
+    .menu-description .prix
+    {
+        font-weight: bold;
+        margin-left: 119%;
+        margin-top: -1.2rem;
+        transition: all 0.5s;   
+    }
+    .menu-item:hover .prix
+    {
+        margin-left: 94rem;
+    }
     .menu-confirmation
     {
-        margin: 0 0 0 5rem;
+        margin: 0 0 0 17.8rem;
     }
     .menu-item:hover .menu-description
     {
