--- a/menu-tablette.css
+++ b/menu-tablette.css
@@ -25,6 +25,7 @@
         -webkit-background-clip: text;
         opacity: 0;
         transition: all 600ms;
+        margin-right: 2%;
     }
     .titre .icone-aime-2:hover
     {
@@ -37,14 +38,17 @@
     .menu-item p 
     {
         max-width: 19.2rem;
-    }
-    .menu-item span 
-    {
-        margin-right: -8.5rem;
     }    
-    .prix
+    .menu-description .prix
     {
-        margin-left: 6rem;
+        font-weight: bold;
+        margin-left: 113%;
+        margin-top: -1.2rem;
+        transition: all 0.5s;   
+    }
+    .menu-item:hover .prix
+    {
+        margin-left: 42rem;
     }
     .menu-confirmation
     {
@@ -53,10 +57,6 @@
     .menu-item:hover .menu-description
     {
         margin-right: -4rem;
-    }
-    .menu-item:hover span
-    {
-        margin-right: -5rem;
     }
     
     footer h2 
