--- a/desktop.css
+++ b/desktop.css
@@ -49,7 +49,7 @@
     }
     footer h2
     {
-        margin-left: 50rem;
+        margin-left: 50%;
         padding-top: 1rem;
         margin-left: 50%;
         padding-top: 1%;
