--- a/menu-mobile.css
+++ b/menu-mobile.css
@@ -63,21 +63,21 @@ body
 .icone-aime
 {
     font-size: 2rem;
-    margin: 1rem 0 0 6rem;
+   
     position: relative;
 }
 .icone-aime-2
 {
     position: absolute;
     font-size: 2.1rem;
-    margin-top: 1rem;
+    margin-top: -1px;
     color: transparent;
     background: linear-gradient(var(--primary),var(--secondary));
     -webkit-background-clip: text;
     opacity: 0;
     transition: all 600ms;
     right: 0;
-    margin-right: 4.1%;
+    margin-right: 14px;
 }
 .icone-aime-2:hover
 {
@@ -112,9 +112,9 @@ body
     box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 25%);
     margin-bottom: 1rem;
     cursor: pointer;
-    width: 100%;
+   /*overflow: hidden;*/
     display: flex;
-    overflow: hidden;
+    justify-content: space-between;
 } 
 .animate-0
 {
@@ -175,32 +175,37 @@ body
     margin: 0.5rem 0 0.2rem 0;
     font-size: 1.1rem;
 }
-.menu-item p
+.menu-item .menu-span
 {
-    margin: 0 0 0.1rem 0;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    max-width: 18.2rem;
+   transition: all 0.5s;
+   margin-right: 10rem;
 }
 .menu-description .prix
 {
     font-weight: bold;
-    margin-left: 113%;
-    margin-top: -1.2rem;
-    transition: all 0.5s;   
+    transition: all 0.5s;  
+}
+.menu-prix
+{
+    display: flex;
+    overflow: hidden;
+    max-width: 100%;
+    justify-content: space-between;
 }
 .menu-confirmation
 {
     background-color: var(--tertiary);
     border-radius: 0 1rem 1rem 0;
-    margin: 0 0 0 4rem;
-    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 1rem;
+    display: none;
+    margin-right: -5rem;
 }
 .menu-icon 
 {
@@ -217,10 +222,9 @@ body
 {
     color: var(--tertiary);
 }
-.menu-item:hover .menu-description
+.menu-item:hover .menu-span
 {
-    margin-right: -3.5rem;
-    
+    margin-right: -9rem;
 }
 .menu-description:hover .prix
 {
@@ -230,9 +234,12 @@ body
 {
     animation: confirmation 1s;
 }
-.menu-item:hover p
+.menu-item:hover .menu-confirmation
 {
-    margin-right: 3rem;
+    margin-right: 1rem;
+    display: block;
+    transition: transform .75s;
+    transform: translateX(1%);
 }
 
 @keyframes confirmation 
@@ -246,10 +253,8 @@ body
 }
 .menu-description
 {
-
-    min-width: 83%;
-    padding: 0.3rem 1rem;
     transition: all 0.5s;
+    padding: 0 0 13px 1rem;
 }
 
 
