--- a/menu-tablette.css
+++ b/menu-tablette.css
@@ -1,4 +1,4 @@
-@media (min-width: 376px) and (max-width: 990px)
+@media (min-width: 376px) and (max-width: 991px)
 {
     .entête h1 
     {
@@ -12,20 +12,18 @@
     .titre .icone-aime
     {
         font-size: 2rem;
-        margin: 1rem 0 0 32rem;
         position: relative;
     }
     .titre .icone-aime-2
     {
         position: absolute;
         font-size: 2.1rem;
-        margin-top: 1rem;
+        margin-top: -1px;
         color: transparent;
         background: linear-gradient(var(--primary),var(--secondary));
         -webkit-background-clip: text;
         opacity: 0;
         transition: all 600ms;
-        margin-right: 2%;
     }
     .titre .icone-aime-2:hover
     {
@@ -42,26 +40,27 @@
     .menu-description .prix
     {
         font-weight: bold;
-        margin-left: 113%;
-        margin-top: -1.2rem;
         transition: all 0.5s;   
     }
-    .menu-item:hover .prix
+    .menu-item:hover .menu-span
     {
-        margin-left: 42rem;
+        margin-right: -9rem;
     }
     .menu-confirmation
     {
         margin-left: 17%;
     }
-    .menu-item:hover .menu-description
+    .menu-item:hover .menu-span
     {
-        margin-right: -4rem;
+        margin-right: -17rem;
     }
-    
+    .menu-description:hover .prix 
+    {
+        margin-left: 42rem;
+    }
     footer h2 
     {
-        margin-left: 23rem;
+        margin-left: 45%;
     }
     .footer-information
     {
