--- a/menu-mobile.css
+++ b/menu-mobile.css
@@ -112,9 +112,8 @@ body
     box-shadow: 0.25rem 0.25rem 10px rgb(0 0 0 / 25%);
     margin-bottom: 1rem;
     cursor: pointer;
-   /*overflow: hidden;*/
     display: flex;
-    justify-content: space-between;
+    max-width: 100%;
 } 
 .animate-0
 {
@@ -181,7 +180,7 @@ body
     text-overflow: ellipsis;
     overflow: hidden;
    transition: all 0.5s;
-   margin-right: 10rem;
+   
 }
 .menu-description .prix
 {
@@ -191,24 +190,35 @@ body
 .menu-prix
 {
     display: flex;
-    overflow: hidden;
-    max-width: 100%;
     justify-content: space-between;
+    margin-top: 0.5rem;
 }
-.menu-confirmation
+.checkbox
 {
     background-color: var(--tertiary);
     border-radius: 0 1rem 1rem 0;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1rem;
-    display: none;
-    margin-right: -5rem;
+    transition: transform .75s ease-in-out .25s;
+    transform: translateX(25%);
+    overflow: hidden;
 }
+.checkbox::after
+{
+    font-family: "Font Awesome 5 Free";
+    font-weight: 700;
+    content: "";
+    font-size: 1.5rem;
+    color: #fff;
+    padding: 1.5rem 1.25rem;
+    display: inline-block;
+}
+.menu-item:hover .checkbox
+{
+    transform: translateX(0);
+}
+
 .menu-icon 
 {
+    position: absolute;
     height: 1.6rem;
     width: 1.6rem;
     background-color: #fff;
@@ -216,32 +226,22 @@ body
     align-items: center;
     justify-content: center;
     border-radius: 100px;
-    margin-top: 0.5rem;
+    margin-top: 1.6rem;
+    margin-left: 1.2rem;
+   
 }
 .icon-confirmation
 {
     color: var(--tertiary);
 }
-.menu-item:hover .menu-span
-{
-    margin-right: -9rem;
-}
-.menu-description:hover .prix
-{
-    margin-left: 16rem;
-}
 .menu-item:hover .icon-confirmation
 {
     animation: confirmation 1s;
 }
-.menu-item:hover .menu-confirmation
+.menu-icon 
 {
-    margin-right: 1rem;
-    display: block;
-    transition: transform .75s;
-    transform: translateX(1%);
+    animation: confirmation 1s;
 }
-
 @keyframes confirmation 
 {
     0%{
@@ -254,7 +254,12 @@ body
 .menu-description
 {
     transition: all 0.5s;
-    padding: 0 0 13px 1rem;
+    padding: 1rem;
+    min-width: 100%;
+}
+.menu-item:hover .menu-description
+{
+    min-width: calc(100% - 4rem);
 }
 
 
